<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0E0E0"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="16dp"
    tools:context="theindianappbaker.example.com.myappportfolio.Home">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_height="50sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="60sp"
        android:layout_marginRight="60sp"
        android:paddingBottom="10sp"
        android:paddingTop="10sp"
        android:text="@string/t1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#424242"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="55sp"
        android:layout_marginTop="7sp"
        android:background="@drawable/my_button_bg"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="60sp"
        android:layout_marginRight="60sp"

        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:paddingBottom="10sp"
        android:paddingTop="10sp"
        android:text="@string/b1"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="55sp"
        android:layout_marginTop="7sp"
        android:background="@drawable/my_button_bg"
        android:layout_below="@+id/button1"

        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="60sp"
        android:layout_marginRight="60sp"
        android:paddingBottom="10sp"
        android:paddingTop="10sp"
        android:text="@string/b2"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="55sp"
        android:layout_marginTop="7sp"

        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:background="@drawable/my_button_bg"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="60sp"
        android:layout_marginRight="60sp"
        android:paddingBottom="10sp"
        android:paddingTop="10sp"
        android:text="@string/b3"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="55sp"
        android:layout_marginTop="7sp"
        android:background="@drawable/my_button_bg"
        android:textColor="#FFFFFF"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="60sp"
        android:layout_marginRight="60sp"
        android:paddingBottom="10sp"
        android:paddingTop="10sp"
        android:text="@string/b4"/>

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="55sp"
        android:layout_marginTop="7sp"
        android:textColor="#FFFFFF"
        android:background="@drawable/my_button_bg"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="60sp"
        android:layout_marginRight="60sp"
        android:paddingBottom="10sp"
        android:paddingTop="10sp"
        android:text="@string/b5"/>

    <Button
        android:id="@+id/button6"
        android:layout_width="match_parent"
        android:layout_height="55sp"
        android:layout_marginTop="7sp"
        android:background="@drawable/my_button_bg"
        android:layout_below="@+id/button5"
        android:textColor="#FFFFFF"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="60sp"
        android:layout_marginRight="60sp"
        android:paddingBottom="10sp"
        android:backgroundTint="#536DFE"
        android:paddingTop="10sp"
        android:text="@string/b6"/>
</RelativeLayout>
